# digital-queue

./: CMakeLists.txt  register.cpp  table.cpp  work.cpp
